# weedly-bot

./: .gitignore  Dockerfile  Makefile  pyproject.toml
.github/workflows/: docker-publish.yml
weedly_bot/: __main__.py  bot.py  loader.py  my_logging.config  test.py
weedly_bot/api/: authors.py  client.py  feeds.py  users.py  youtube.py
weedly_bot/paths/: __init__.py  echo.py  welcome_message.py
weedly_bot/paths/add_feeds/: __init__.py  add_rss.py  what_to_add.py
weedly_bot/paths/my_subs/: __init__.py  choose_what_to_read.py  read_all_feeds_in_one.py  read_articles_from_one_feed.py  unsubscribe_rss.py
weedly_bot/paths/notifications/: first_step.py
weedly_bot/utils/: generators.py  rss.py
